# CodeForge

./: .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml
6ladies/: CAMBIOS.md  README.md  index.html  package-lock.json  package.json
6ladies/src/: App.tsx  app.css  index.css
AI_Game/: TAREA DE AI PROYECTO.docx  package-lock.json  package.json  tsconfig.json
AI_Game/src/: App.tsx  app.css
ChallengesDev/: README.md
TheoreticalResearch/: README.md  advanced_tokenization_zkp_model.tex  cryptographic_evaluation_model.tex  don_bosco_precipitation_analysis.tex
TheoreticalResearch/Avax_Research/: .gitignore  Makefile  README.md  requirements.txt
TheoreticalResearch/DonBosco_Climate/: README.md  pyproject.toml
Veronica/: ARCHITECTURE.md  BLOCKCHAIN_AGENT_INTEGRATION.md  DEPLOYMENT.md  README.md  TODO.md  VERONICA_JARVIS_TRANSFORMATION_REPORT.md  docker-compose.yml  test_veronica.py
Veronica/backend/: .env.example  .gitignore  main.py  requirements.txt
Veronica/frontend/: app.py  package.json
WhatsAppAssistant/: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
WhatsAppAssistant/backend/: .gitignore  Dockerfile  package.json
WhatsAppAssistant/deploy/: nginx.conf.example
WhatsAppAssistant/frontend/: index.html  package.json  requirements.md  tailwind.config.ts  tsconfig.json  vite.config.ts
WhatsAppAssistant/shared/: routes.ts  schema.ts
WhatsappBot/: .env.example  README.md  STRUCTURE.md  bot_instructions.py  config.py  groq_client.py  message_handler.py  start.sh  whatsapp_bot.py
WhatsappBot/backend/: alembic.ini  run.py  (+1 more)
docs/: env-reference.md
(+300 files in other folders)
