[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "donbosco-climate"
version = "0.1.0"
description = "Climate analysis of Don Bosco, Villas de Andalucía, Panama (2000-2025)"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Computational Climate Analysis - Research Project"},
]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "statsmodels>=0.14.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "requests>=2.31.0",
    "pyarrow>=12.0.0",
    "python-dateutil>=2.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]
geo = [
    "cartopy>=0.21.0",
    "geopandas>=0.13.0",
]
nasa = [
    "xarray>=2023.1.0",
    "netcdf4>=1.6.4",
    "h5py>=3.8.0",
]
notebook = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0",
]

[project.scripts]
donbosco-climate = "donbosco_climate.pipeline:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short --cov=src/donbosco_climate"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "ARG"]

[tool.mypy]
python_version = "3.10"
strict = false
warn_unused_configs = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/donbosco_climate"]
